add info about tdf

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <main>
             <section class="chatbot-container">
                 <div class="chatbot-header">
-                    <img src="images/logo-scrimba.svg" class="logo">
-                    <p class="sub-heading">Knowledge Bank</p>
+                    <img src="images/Tour_de_France_logo.svg" class="logo">
+                    <p class="sub-heading">Ask me a question about the Tour de France!</p>
                 </div>
                 <div class="chatbot-conversation-container" id="chatbot-conversation-container">
                 </div>
